- vite reload working without JS entry
- vite now watches SRC/compiles and restarts to ensure no caching issue during dev

--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <title>XENO TERMINAL</title>
     <link rel="stylesheet" href="/dist/index.css" />
 </head>
-<body>
-    <div class="terminal">
-
+<body class="bodyFullScreen">
+    <div class="fullWidthfullHeight terminal">
+        <h1>Xeno Terminal 1</h1>
     </div>
-
-
 </body>
-</html>
+</html> 
