- add table example
- start work on table
- added in bootstrap for layout examples

--- a/html/example1.html
+++ b/html/example1.html
@@ -7,7 +7,11 @@
     <title>XENO TERMINAL</title>
 
 
-    <link rel="stylesheet"  href="/dist/index.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet"  href="../dist/index.css"/>
 
 </head>
 
@@ -26,7 +30,7 @@
     <section id="section1">
         <h2>Section 1: Text Content</h2>
         <p>
-            This is a <strong>paragraph</strong> with some <em>emphasized</em> text. Here’s a <a href="#">link</a> and some
+            This is a <strong>paragraph</strong> with some <em>emphasized</em> text. Hereï¿½s a <a href="#">link</a> and some
             <abbr title="Hypertext Markup Language">HTML</abbr> code.
         </p>
         <blockquote cite="https://www.example.com">
