--- a/html/table.html
+++ b/html/table.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body class="min-vh-100 terminal">
    
   <header class="navbar sticky-top flex-md-nowrap p-0">
     <a class="col-md-3 col-lg-2 me-0 px-3" href="/">MU/TH/ER</a>
